Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [submit]
 [access "refs/*"]
+	owner = group kmutnb
 	owner = group user/yaikaew (yaikaew)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/yaikaew (yaikaew)
