Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [submit]
 [access "refs/*"]
 	owner = group kmutnb
+	owner = group set-intern
 	owner = group user/yaikaew (yaikaew)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/yaikaew (yaikaew)
