Modify access rules

--- a/project.config
+++ b/project.config
@@ -6,18 +6,30 @@
 	owner = group set-intern
 	owner = group user/yaikaew (yaikaew)
 [access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group set-intern
 	label-Code-Review = -2..+2 group user/yaikaew (yaikaew)
+	label-Verified = -1..+1 group set-intern
 	label-Verified = -1..+1 group user/yaikaew (yaikaew)
+	push = group set-intern
 	push = group user/yaikaew (yaikaew)
+	read = group set-intern
 	read = group user/yaikaew (yaikaew)
+	rebase = group set-intern
 	rebase = group user/yaikaew (yaikaew)
+	removeReviewer = group set-intern
 	removeReviewer = group user/yaikaew (yaikaew)
+	submit = group set-intern
 	submit = group user/yaikaew (yaikaew)
 [access "refs/heads/*"]
+	create = group set-intern
 	create = group user/yaikaew (yaikaew)
+	push = group set-intern
 	push = +force group user/yaikaew (yaikaew)
+	pushMerge = group set-intern
 	pushMerge = group user/yaikaew (yaikaew)
+	read = group set-intern
 	read = group user/yaikaew (yaikaew)
 [access "refs/tags/*"]
+	push = group set-intern
 	push = group user/yaikaew (yaikaew)
 	push = +force group user/yaikaew (yaikaew)
